--- a/industry_code_cleaning.ipynb
+++ b/industry_code_cleaning.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 266,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2111,7 +2111,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 269,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"metadata_reports_noduplicates_full_industry.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 270,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2124,7 +2133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 272,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2137,7 +2146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 273,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2152,7 +2161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 274,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2161,7 +2170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 275,
    "metadata": {
     "scrolled": true
    },
@@ -2187,6 +2196,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
        "      <th>Available</th>\n",
        "      <th>Date</th>\n",
        "      <th>Doc Grp</th>\n",
@@ -2196,7 +2206,6 @@
        "      <th>RI</th>\n",
        "      <th>Title</th>\n",
        "      <th>Pages</th>\n",
-       "      <th>Price</th>\n",
        "      <th>...</th>\n",
        "      <th>Match_Ticker</th>\n",
        "      <th>GenderAnalyst</th>\n",
@@ -2213,6 +2222,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>2018-11-02</td>\n",
        "      <td>2018-10-26</td>\n",
        "      <td>Inv.</td>\n",
@@ -2222,7 +2232,6 @@
        "      <td>Estimate Increase, TargetPrice Increase</td>\n",
        "      <td>3Q18 Recap: Maintaining Our Rating, Raising Ou...</td>\n",
        "      <td>9.0</td>\n",
-       "      <td>92.0</td>\n",
        "      <td>...</td>\n",
        "      <td>1</td>\n",
        "      <td>male</td>\n",
@@ -2237,6 +2246,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>2018-11-25</td>\n",
        "      <td>2018-10-26</td>\n",
        "      <td>Inv.</td>\n",
@@ -2246,7 +2256,6 @@
        "      <td>Estimate Increase</td>\n",
        "      <td>Morningstar | Raising Our FVE After American S...</td>\n",
        "      <td>13.0</td>\n",
-       "      <td>69.0</td>\n",
        "      <td>...</td>\n",
        "      <td>1</td>\n",
        "      <td>male</td>\n",
@@ -2261,6 +2270,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "      <td>2018-11-25</td>\n",
        "      <td>2018-10-26</td>\n",
        "      <td>Inv.</td>\n",
@@ -2270,7 +2280,6 @@
        "      <td>Estimate Revision, TargetPrice Increase</td>\n",
        "      <td>Morningstar | Rising Fuel Costs Raise American...</td>\n",
        "      <td>25.0</td>\n",
-       "      <td>195.5</td>\n",
        "      <td>...</td>\n",
        "      <td>1</td>\n",
        "      <td>male</td>\n",
@@ -2285,6 +2294,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "      <td>2018-11-02</td>\n",
        "      <td>2018-10-26</td>\n",
        "      <td>Inv.</td>\n",
@@ -2294,7 +2304,6 @@
        "      <td>Estimate Increase</td>\n",
        "      <td>3Q18 Recap; Strategic Initiatives Aimed At Dri...</td>\n",
        "      <td>5.0</td>\n",
-       "      <td>80.0</td>\n",
        "      <td>...</td>\n",
        "      <td>1</td>\n",
        "      <td>male</td>\n",
@@ -2309,6 +2318,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "      <td>2018-11-02</td>\n",
        "      <td>2018-10-26</td>\n",
        "      <td>Inv.</td>\n",
@@ -2318,7 +2328,6 @@
        "      <td>Estimate Revision, Recommendation Decrease, Ta...</td>\n",
        "      <td>American Airlines Group Inc.</td>\n",
        "      <td>9.0</td>\n",
-       "      <td>69.0</td>\n",
        "      <td>...</td>\n",
        "      <td>1</td>\n",
        "      <td>male</td>\n",
@@ -2356,7 +2365,8 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>89650</th>\n",
+       "      <th>98729</th>\n",
+       "      <td>98729</td>\n",
        "      <td>2018-01-29</td>\n",
        "      <td>2018-01-22</td>\n",
        "      <td>Inv.</td>\n",
@@ -2366,7 +2376,6 @@
        "      <td>NaN</td>\n",
        "      <td>Zions Bancorporation  - 4Q Core EPS $0.80 - So...</td>\n",
        "      <td>12.0</td>\n",
-       "      <td>92.0</td>\n",
        "      <td>...</td>\n",
        "      <td>1</td>\n",
        "      <td>male</td>\n",
@@ -2380,7 +2389,8 @@
        "      <td>(4010.0, 2018 q1)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>89651</th>\n",
+       "      <th>98730</th>\n",
+       "      <td>98730</td>\n",
        "      <td>2018-01-29</td>\n",
        "      <td>2018-01-22</td>\n",
        "      <td>Inv.</td>\n",
@@ -2390,7 +2400,6 @@
        "      <td>NaN</td>\n",
        "      <td>Solid Fees Offset Slightly Smaller Balance She...</td>\n",
        "      <td>7.0</td>\n",
-       "      <td>100.0</td>\n",
        "      <td>...</td>\n",
        "      <td>1</td>\n",
        "      <td>NaN</td>\n",
@@ -2404,7 +2413,8 @@
        "      <td>(4010.0, 2018 q1)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>89652</th>\n",
+       "      <th>98731</th>\n",
+       "      <td>98731</td>\n",
        "      <td>2018-02-05</td>\n",
        "      <td>2018-01-22</td>\n",
        "      <td>Inv.</td>\n",
@@ -2414,7 +2424,6 @@
        "      <td>NaN</td>\n",
        "      <td>4Q17 - Post Conference Call Model Update</td>\n",
        "      <td>7.0</td>\n",
-       "      <td>69.0</td>\n",
        "      <td>...</td>\n",
        "      <td>1</td>\n",
        "      <td>male</td>\n",
@@ -2428,7 +2437,8 @@
        "      <td>(4010.0, 2018 q1)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>89653</th>\n",
+       "      <th>98732</th>\n",
+       "      <td>98732</td>\n",
        "      <td>2018-01-17</td>\n",
        "      <td>2018-01-10</td>\n",
        "      <td>Inv.</td>\n",
@@ -2438,7 +2448,6 @@
        "      <td>NaN</td>\n",
        "      <td>Zions Bancorporation</td>\n",
        "      <td>9.0</td>\n",
-       "      <td>69.0</td>\n",
        "      <td>...</td>\n",
        "      <td>1</td>\n",
        "      <td>male</td>\n",
@@ -2452,7 +2461,8 @@
        "      <td>(4010.0, 2018 q1)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>89654</th>\n",
+       "      <th>98733</th>\n",
+       "      <td>98733</td>\n",
        "      <td>2018-01-04</td>\n",
        "      <td>2018-01-04</td>\n",
        "      <td>Inv.</td>\n",
@@ -2462,7 +2472,6 @@
        "      <td>NaN</td>\n",
        "      <td>Rating Update for Zions Bancorp</td>\n",
        "      <td>3.0</td>\n",
-       "      <td>23.0</td>\n",
        "      <td>...</td>\n",
        "      <td>1</td>\n",
        "      <td>Not a person</td>\n",
@@ -2477,79 +2486,79 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>73579 rows × 32 columns</p>\n",
+       "<p>81492 rows × 33 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "        Available        Date Doc Grp Info       Prim. Ticker Second. Ticker  \\\n",
-       "0      2018-11-02  2018-10-26    Inv.  pdf             AAL.OQ            NaN   \n",
-       "1      2018-11-25  2018-10-26    Inv.  pdf             AAL.OQ            NaN   \n",
-       "2      2018-11-25  2018-10-26    Inv.  pdf             AAL.OQ            NaN   \n",
-       "3      2018-11-02  2018-10-26    Inv.  pdf             AAL.OQ            NaN   \n",
-       "4      2018-11-02  2018-10-26    Inv.  pdf             AAL.OQ            NaN   \n",
-       "...           ...         ...     ...  ...                ...            ...   \n",
-       "89650  2018-01-29  2018-01-22    Inv.  pdf  ZIONP.OQ, ZION.OQ            NaN   \n",
-       "89651  2018-01-29  2018-01-22    Inv.  pdf  ZIONP.OQ, ZION.OQ            NaN   \n",
-       "89652  2018-02-05  2018-01-22    Inv.  pdf  ZIONP.OQ, ZION.OQ            NaN   \n",
-       "89653  2018-01-17  2018-01-10    Inv.  pdf  ZIONP.OQ, ZION.OQ            NaN   \n",
-       "89654  2018-01-04  2018-01-04    Inv.  pdf  ZIONP.OQ, ZION.OQ            NaN   \n",
+       "       Unnamed: 0   Available        Date Doc Grp Info       Prim. Ticker  \\\n",
+       "0               0  2018-11-02  2018-10-26    Inv.  pdf             AAL.OQ   \n",
+       "1               1  2018-11-25  2018-10-26    Inv.  pdf             AAL.OQ   \n",
+       "2               2  2018-11-25  2018-10-26    Inv.  pdf             AAL.OQ   \n",
+       "3               3  2018-11-02  2018-10-26    Inv.  pdf             AAL.OQ   \n",
+       "4               4  2018-11-02  2018-10-26    Inv.  pdf             AAL.OQ   \n",
+       "...           ...         ...         ...     ...  ...                ...   \n",
+       "98729       98729  2018-01-29  2018-01-22    Inv.  pdf  ZIONP.OQ, ZION.OQ   \n",
+       "98730       98730  2018-01-29  2018-01-22    Inv.  pdf  ZIONP.OQ, ZION.OQ   \n",
+       "98731       98731  2018-02-05  2018-01-22    Inv.  pdf  ZIONP.OQ, ZION.OQ   \n",
+       "98732       98732  2018-01-17  2018-01-10    Inv.  pdf  ZIONP.OQ, ZION.OQ   \n",
+       "98733       98733  2018-01-04  2018-01-04    Inv.  pdf  ZIONP.OQ, ZION.OQ   \n",
        "\n",
-       "                                                      RI  \\\n",
-       "0                Estimate Increase, TargetPrice Increase   \n",
-       "1                                      Estimate Increase   \n",
-       "2                Estimate Revision, TargetPrice Increase   \n",
-       "3                                      Estimate Increase   \n",
-       "4      Estimate Revision, Recommendation Decrease, Ta...   \n",
-       "...                                                  ...   \n",
-       "89650                                                NaN   \n",
-       "89651                                                NaN   \n",
-       "89652                                                NaN   \n",
-       "89653                                                NaN   \n",
-       "89654                                                NaN   \n",
+       "      Second. Ticker                                                 RI  \\\n",
+       "0                NaN            Estimate Increase, TargetPrice Increase   \n",
+       "1                NaN                                  Estimate Increase   \n",
+       "2                NaN            Estimate Revision, TargetPrice Increase   \n",
+       "3                NaN                                  Estimate Increase   \n",
+       "4                NaN  Estimate Revision, Recommendation Decrease, Ta...   \n",
+       "...              ...                                                ...   \n",
+       "98729            NaN                                                NaN   \n",
+       "98730            NaN                                                NaN   \n",
+       "98731            NaN                                                NaN   \n",
+       "98732            NaN                                                NaN   \n",
+       "98733            NaN                                                NaN   \n",
        "\n",
-       "                                                   Title  Pages  Price  ...  \\\n",
-       "0      3Q18 Recap: Maintaining Our Rating, Raising Ou...    9.0   92.0  ...   \n",
-       "1      Morningstar | Raising Our FVE After American S...   13.0   69.0  ...   \n",
-       "2      Morningstar | Rising Fuel Costs Raise American...   25.0  195.5  ...   \n",
-       "3      3Q18 Recap; Strategic Initiatives Aimed At Dri...    5.0   80.0  ...   \n",
-       "4                           American Airlines Group Inc.    9.0   69.0  ...   \n",
-       "...                                                  ...    ...    ...  ...   \n",
-       "89650  Zions Bancorporation  - 4Q Core EPS $0.80 - So...   12.0   92.0  ...   \n",
-       "89651  Solid Fees Offset Slightly Smaller Balance She...    7.0  100.0  ...   \n",
-       "89652           4Q17 - Post Conference Call Model Update    7.0   69.0  ...   \n",
-       "89653                               Zions Bancorporation    9.0   69.0  ...   \n",
-       "89654                    Rating Update for Zions Bancorp    3.0   23.0  ...   \n",
+       "                                                   Title  Pages  ...  \\\n",
+       "0      3Q18 Recap: Maintaining Our Rating, Raising Ou...    9.0  ...   \n",
+       "1      Morningstar | Raising Our FVE After American S...   13.0  ...   \n",
+       "2      Morningstar | Rising Fuel Costs Raise American...   25.0  ...   \n",
+       "3      3Q18 Recap; Strategic Initiatives Aimed At Dri...    5.0  ...   \n",
+       "4                           American Airlines Group Inc.    9.0  ...   \n",
+       "...                                                  ...    ...  ...   \n",
+       "98729  Zions Bancorporation  - 4Q Core EPS $0.80 - So...   12.0  ...   \n",
+       "98730  Solid Fees Offset Slightly Smaller Balance She...    7.0  ...   \n",
+       "98731           4Q17 - Post Conference Call Model Update    7.0  ...   \n",
+       "98732                               Zions Bancorporation    9.0  ...   \n",
+       "98733                    Rating Update for Zions Bancorp    3.0  ...   \n",
        "\n",
-       "      Match_Ticker GenderAnalyst  year  quarter   PERMNO gsector  ggroup  \\\n",
-       "0                1          male  2018        4  21020.0    20.0  2030.0   \n",
-       "1                1          male  2018        4  21020.0    20.0  2030.0   \n",
-       "2                1          male  2018        4  21020.0    20.0  2030.0   \n",
-       "3                1          male  2018        4  21020.0    20.0  2030.0   \n",
-       "4                1          male  2018        4  21020.0    20.0  2030.0   \n",
-       "...            ...           ...   ...      ...      ...     ...     ...   \n",
-       "89650            1          male  2018        1  84129.0    40.0  4010.0   \n",
-       "89651            1           NaN  2018        1  84129.0    40.0  4010.0   \n",
-       "89652            1          male  2018        1  84129.0    40.0  4010.0   \n",
-       "89653            1          male  2018        1  84129.0    40.0  4010.0   \n",
-       "89654            1  Not a person  2018        1  84129.0    40.0  4010.0   \n",
+       "       Match_Ticker GenderAnalyst  year  quarter   PERMNO gsector  ggroup  \\\n",
+       "0                 1          male  2018        4  21020.0    20.0  2030.0   \n",
+       "1                 1          male  2018        4  21020.0    20.0  2030.0   \n",
+       "2                 1          male  2018        4  21020.0    20.0  2030.0   \n",
+       "3                 1          male  2018        4  21020.0    20.0  2030.0   \n",
+       "4                 1          male  2018        4  21020.0    20.0  2030.0   \n",
+       "...             ...           ...   ...      ...      ...     ...     ...   \n",
+       "98729             1          male  2018        1  84129.0    40.0  4010.0   \n",
+       "98730             1           NaN  2018        1  84129.0    40.0  4010.0   \n",
+       "98731             1          male  2018        1  84129.0    40.0  4010.0   \n",
+       "98732             1          male  2018        1  84129.0    40.0  4010.0   \n",
+       "98733             1  Not a person  2018        1  84129.0    40.0  4010.0   \n",
        "\n",
-       "       industry  quarter_year   industry-quarter  \n",
-       "0        2030.0       2018 q4  (2030.0, 2018 q4)  \n",
-       "1        2030.0       2018 q4  (2030.0, 2018 q4)  \n",
-       "2        2030.0       2018 q4  (2030.0, 2018 q4)  \n",
-       "3        2030.0       2018 q4  (2030.0, 2018 q4)  \n",
-       "4        2030.0       2018 q4  (2030.0, 2018 q4)  \n",
-       "...         ...           ...                ...  \n",
-       "89650    4010.0       2018 q1  (4010.0, 2018 q1)  \n",
-       "89651    4010.0       2018 q1  (4010.0, 2018 q1)  \n",
-       "89652    4010.0       2018 q1  (4010.0, 2018 q1)  \n",
-       "89653    4010.0       2018 q1  (4010.0, 2018 q1)  \n",
-       "89654    4010.0       2018 q1  (4010.0, 2018 q1)  \n",
+       "      industry  quarter_year   industry-quarter  \n",
+       "0       2030.0       2018 q4  (2030.0, 2018 q4)  \n",
+       "1       2030.0       2018 q4  (2030.0, 2018 q4)  \n",
+       "2       2030.0       2018 q4  (2030.0, 2018 q4)  \n",
+       "3       2030.0       2018 q4  (2030.0, 2018 q4)  \n",
+       "4       2030.0       2018 q4  (2030.0, 2018 q4)  \n",
+       "...        ...           ...                ...  \n",
+       "98729   4010.0       2018 q1  (4010.0, 2018 q1)  \n",
+       "98730   4010.0       2018 q1  (4010.0, 2018 q1)  \n",
+       "98731   4010.0       2018 q1  (4010.0, 2018 q1)  \n",
+       "98732   4010.0       2018 q1  (4010.0, 2018 q1)  \n",
+       "98733   4010.0       2018 q1  (4010.0, 2018 q1)  \n",
        "\n",
-       "[73579 rows x 32 columns]"
+       "[81492 rows x 33 columns]"
       ]
      },
-     "execution_count": 257,
+     "execution_count": 275,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2560,7 +2569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 277,
    "metadata": {},
    "outputs": [],
    "source": [
